--- a/lesson-02-spring-basics/pom.xml
+++ b/lesson-02-spring-basics/pom.xml
@@ -10,14 +10,25 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
 
-    <artifactId>lesson-01-servlet-api</artifactId>
+    <artifactId>lesson-02-spring-basics</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
-            <scope>provided</scope>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
     </dependencies>
 
@@ -39,11 +50,9 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <username>admin</username>
                     <url>http://89.108.70.167:8080/manager/text</url>
+                    <username>admin</username>
                     <password>UBTi4)yRaxVkUw2</password>
-<!--                    <url>http://localhost:8080/manager/text</url>-->
-<!--                    <password>admin</password>-->
                     <path>/servlet-app</path>
                 </configuration>
             </plugin>
