--- a/lesson-03-spring-mvc/pom.xml
+++ b/lesson-03-spring-mvc/pom.xml
@@ -10,19 +10,37 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
 
-    <artifactId>lesson-02-spring-basics</artifactId>
+    <artifactId>lesson-03-spring-mvc</artifactId>
+
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
+            <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring5</artifactId>
+            <version>3.0.14.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -30,11 +48,10 @@
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
         </dependency>
+
     </dependencies>
 
     <build>
-        <finalName>servlet-app</finalName>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -50,12 +67,13 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <username>admin</username>
-                    <!--                    <url>http://89.108.70.167:8080/manager/text</url>-->
-                    <!--                    <password>UBTi4)yRaxVkUw2</password>-->
+                    <path>/mvc-app</path>
+<!--                    <url>http://89.108.70.167:8080/manager/text</url>-->
+<!--                    <username>admin</username>-->
+<!--                    <password>UBTi4)yRaxVkUw2</password>-->
                     <url>http://localhost:8080/manager/text</url>
+                    <username>admin</username>
                     <password>leesti</password>
-                    <path>/servlet-app</path>
                 </configuration>
             </plugin>
         </plugins>
