--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,13 @@
         <maven.compiler.target>11</maven.compiler.target>
         <spring.version>5.3.13</spring.version>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+    </dependencies>
     <modules>
         <module>lesson-01-servlet-api</module>
         <module>lesson-02-spring-basics</module>
