--- a/lesson-01-servlet-api/pom.xml
+++ b/lesson-01-servlet-api/pom.xml
@@ -40,8 +40,10 @@
                 <version>2.2</version>
                 <configuration>
                     <username>admin</username>
-                    <url>http://89.108.70.167:8080/manager/text</url>
-                    <password>UBTi4)yRaxVkUw2</password>
+                    <url>http://app-srv01:8080/manager/text</url>
+                    <password>admin</password>
+<!--                    <url>http://89.108.70.167:8080/manager/text</url>-->
+<!--                    <password>UBTi4)yRaxVkUw2</password>-->
 <!--                    <url>http://localhost:8080/manager/text</url>-->
 <!--                    <password>admin</password>-->
                     <path>/servlet-app</path>
