--- a/pom.xml
+++ b/pom.xml
@@ -12,19 +12,14 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <spring.version>5.3.13</spring.version>
+        <spring.version>5.3.14</spring.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.11.2</version>
-        </dependency>
-    </dependencies>
+
     <modules>
         <module>lesson-01-servlet-api</module>
         <module>lesson-02-spring-basics</module>
         <module>lesson-03-spring-mvc</module>
+        <module>lesson-04-spring-boot</module>
     </modules>
 
 </project>
