--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>lesson-04-spring-boot</module>
         <module>lesson-05-hibernate</module>
         <module>lesson-06-hibernate2</module>
+        <module>lesson-07-spring-data</module>
+        <module>lesson-08-thymeleaf</module>
     </modules>
 
 </project>
